--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -428,3 +428,32 @@ a.pagination-item:hover {
     border-bottom-right-radius: 4px;
   }
 }
+
+.embed-click {
+  width: 640px;
+  height: 480px;
+  background-color: #eee;
+  position: relative;
+}
+
+.button-play {
+  border-top: 20px solid #eee;
+  border-bottom: 20px solid #eee;
+  border-left: 40px solid #222;
+  border-right: none;
+  height: 0px;
+  
+  position: absolute;
+  top: calc(50% - 40px);
+  left: calc(50% - 40px);
+}
+
+.button-play:hover {
+  border-left-color: #88c;
+}
+
+
+iframe {
+  width: 100%;
+  height: 100%;
+}
